# SkylandersPortalEmulator

./: .gitignore  README.md
common/: Common.hpp
gui/: CMakeLists.txt  HeaderUnitSupport.cmake
gui/src/: Figure.cpp  Figure.cppm  FigureLoader.cpp  FigureLoader.cppm  Font.cppm  Main.cpp  Owner.cpp  Owner.cppm  PortalEmulator.cpp  PortalEmulator.cppm  PortalSlot.cpp  PortalSlot.cppm  Texture.cpp  Texture.cppm
pico/: CMakeLists.txt  pico_sdk_import.cmake
pico/config/: FreeRTOSConfig.h  UsbDescriptors.cpp  lwipopts.h  tusb_config.h
pico/src/: Main.cpp
